WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136798
Swiping back from a Twitter image to Twitter flashes to the wrong position
https://bugs.webkit.org/show_bug.cgi?id=136798
Summary
Swiping back from a Twitter image to Twitter flashes to the wrong position
Tim Horton
Reported
2014-09-12 17:48:34 PDT
Swiping back from a Twitter image to Twitter flashes to the wrong position
Attachments
Patch
(7.29 KB, patch)
2014-09-12 17:48 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-09-12 17:48:49 PDT
Created
attachment 238079
[details]
Patch
Tim Horton
Comment 2
2014-09-12 17:49:15 PDT
rdar://problem/18324338
Sam Weinig
Comment 3
2014-09-12 17:51:05 PDT
Comment on
attachment 238079
[details]
Patch r=me as well.
Tim Horton
Comment 4
2014-09-12 17:59:59 PDT
http://trac.webkit.org/changeset/173595
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug